# ENTS-tock

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  prepush.sh  requirements.txt  versions.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yaml
docs/: README.md
embedded/: .gitignore  README.md  clean.sh  install.sh
embedded/doxygen/: README.md
embedded/esp32/: .gitignore  README.md  build-esp32.sh  build.sh  format.sh  install.sh  lint-esp32.sh  lint.sh  platformio.ini
proto/: Makefile  controller.options  controller.proto  measurements.proto  sensor.options  sensor.proto  soil_power_sensor.options  user_config.options  user_config.proto
python/: README.md  build.sh  format.sh  lint-python.sh  lint.sh  pyproject.toml  test.sh
python/src/ents/: cli.py
python/src/ents/calibrate/: recorder.py
python/src/ents/config/: user_config.py
python/src/ents/config/Load/: cell_1352_.json  cell_1383_.json  cell_1481_.json  cell_1482_.json  cell_1483_.json  cell_1484_.json  cell_1514_.json  cell_1515_.json  cell_1516_.json  cell_1517_.json  cell_1518_.json  cell_1519_.json  cell_1520_.json  cell_1521_.json  cell_1522_.json  cell_1523_.json  cell_1524_.json  cell_1532_.json  cell_1533_.json  cell_1534_.json  cell_1539_.json  cell_200_.json  cell_525_.json  cell_921_.json  cell_922_.json  cell_923_.json
python/src/ents/dirtviz/: __init__.py  client.py  plots.py
python/src/ents/proto/: controller_pb2.py  measurements_pb2.py  sensor.py  sensor_pb2.py  user_config_pb2.py
python/src/ents/simulator/: node.py
tools/: README.md
(+197 files in other folders)
