[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ents"
version = "2.3.7"
authors = [
  { name="John Madden", email="jmadden173@pm.me" },
]
description = "Python package for Environmental NeTworked Sensor (ENTS)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  'protobuf==6.33.5',
  'matplotlib',
  'pandas',
  'pyserial',
  'scikit-learn',
  'tqdm',
  'requests',
]

[project.optional-dependencies]
gui = [
  'PyQt5',
]

dev = [
  "ruff",
  "build",
]

[project.scripts]
ents = "ents.cli:entry"

[project.gui-scripts]
ents-gui = "ents.config.user_config:main"

[project.urls]
Homepage = "https://github.com/jlab-sensing/soil-power-sensor-firmware"
Issues = "https://github.com/jlab-sensing/soil-power-sensor-firmware/issues"

[tool.ruff]
exclude = [
  "src/ents/proto/*_pb2.py",
]

[tool.black]
exclude = ".*_pb2.py"
